--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "i18next": "^23.15.1",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
