--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.11.2",
     "i18next": "^23.15.1",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "socket.io": "^4.8.0",
