--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.11.2",
@@ -17,6 +18,7 @@
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "next-i18next": "^15.3.1",
+    "primereact": "^10.8.4",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
