--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-i18next": "^15.3.1",
     "primereact": "^10.8.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
