--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
