--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.11.2",
-    "i18next": "^23.15.1",
+    "i18next": "^23.16.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
@@ -23,7 +25,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^15.0.2",
+    "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
